fix gaps

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,7 @@ footer {
 }
 
 .footer__container {
-    @apply flex flex-col md:flex-row justify-between w-[80vw] gap-32
+    @apply flex flex-col md:flex-row justify-between w-[80vw] gap-12 md:gap-32
 }
 
 .footer__description {
